fix problems valid promocod and z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -583,7 +583,6 @@ h2 span {
   line-height: 17px;
   padding: 5px 7.5px;
   border-radius: 5.4px;
-  z-index: 100;
   position: relative;
 }
 .dishes__category_1 {
