--- a/src/scss/components/_dishes.scss
+++ b/src/scss/components/_dishes.scss
@@ -61,7 +61,7 @@
         line-height: 17px;
         padding: 5px 7.5px;
         border-radius: 5.4px;
-        z-index: 100;
+        // z-index: 100;
         position: relative;
         
         &_1 {     
